<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="@dimen/card_height"
android:id="@+id/movie_card" android:layout_marginTop="16dp" android:elevation="100dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:padding="5dp">
    <ImageView
        android:id="@+id/box_art"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"

        android:src="@drawable/die_hard"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TITLE"
        android:textSize="25dp"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@id/box_art"
        android:layout_toLeftOf="@+id/price"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_alignLeft="@id/title"
        android:text="GENRE: "
        android:textSize="20dp"
        android:textColor="@color/subTextColor"
        />

    <TextView
        android:id="@id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove_button"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/title"
        android:layout_marginTop="5dp"
        android:layout_marginRight="9dp"
        android:text="price"
        android:textSize="20dp"
        android:textColor="@android:color/white"/>

    <ImageButton
        android:id="@id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:elevation="50dp"
        android:src="@drawable/ic_delete_black_24dp"/>
</RelativeLayout>


</android.support.v7.widget.CardView>